Created the necessary controllers, services and filters, view helpers for projects and cluster groups
